@@ -1,5 +1,10 @@
 2007-02-18  Dalibor Topic  <robilad@kaffe.org>
 
+	* jartool.c (consume): Allocate buff dynamically,
+	rather than on the stack.
+
+2007-02-18  Dalibor Topic  <robilad@kaffe.org>
+
 	* jartool.c (consume): Documented function.
 
 2007-02-18  Dalibor Topic  <robilad@kaffe.org>
